--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/karimali03/ToDo-app#readme",
   "dependencies": {
+    "ajv": "^8.17.1",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.6.1",
