--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ."
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/karimali03/ToDo-app#readme",
   "dependencies": {
     "ajv": "^8.17.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.6.1",
